# distributed-job-scheduler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start.sh
client/: package.json  pnpm-lock.yaml  test.js
client/src/: App.tsx  main.tsx
client/src/api/: createJob.ts  createWorkflow.ts  fetchJobs.ts  fetchWorkflows.ts  getJob.ts  getWorkflow.ts
client/src/components/: Skeleton.tsx
client/src/components/graph/: CustomNode.tsx  Layout.tsx
client/src/components/inspector/: NodeInspector.tsx
client/src/pages/: CreateWorkflow.tsx  Dashboard.tsx  Job.tsx  JobDetails.tsx  Run.tsx  SubmitJob.tsx  WorkflowDetails.tsx
client/src/types/: workflow.ts
client/src/utils/: formatters.ts
config/: default.yaml
scheduler/: .gitignore  docker-compose.yaml  package.json  pnpm-lock.yaml  script.py  tsconfig.json
scheduler/src/common/: codeWrapper.ts  logger.ts  runtimes.ts  shutdown.ts  stateMachine.ts
scheduler/src/common/db/: connectDB.ts
scheduler/src/common/db/models/: jobSchema.ts  scheduleSchema.ts  workflowSchema.ts
scheduler/src/common/s3/: s3Client.ts
scheduler/src/scheduler/: cronPoller.ts  dispatch.ts  jobService.ts  orchestrator.ts  poller.ts  recovery.ts
scheduler/src/server/: server.ts
scheduler/src/server/controllers/: jobController.ts  workflowController.ts
scheduler/src/server/routes/: jobRoutes.ts  workflowRoutes.ts
scheduler/src/worker/: executor.ts  loader.ts  worker.ts
src/: main.cpp
